fix(core): stretched full width

--- a/packages/core/src/components/tab-item/tab-item.scss
+++ b/packages/core/src/components/tab-item/tab-item.scss
@@ -51,7 +51,7 @@ ix-tab-item {
 
   &.stretched {
     flex-basis: 100%;
-    max-width: max-content;
+    width: 100%;
     @include ellipsis;
   }
 
@@ -146,7 +146,9 @@ ix-tab-item {
       border-color: var(--theme-animated-tab-circle--border-color--selected);
 
       &:hover {
-        background-color: var(--theme-animated-tab-circle--background--selected);
+        background-color: var(
+          --theme-animated-tab-circle--background--selected
+        );
       }
     }
 
